Adicionado uma section

--- a/index.html
+++ b/index.html
@@ -16,16 +16,27 @@
             <a href="">Opção três</a>
             <a href="">Opção quatro</a>
         </nav>
-
     </header>
 
     <main>
+        <section>
+            <div>
+                <h1>Título a ser definido.</h1>
+                <h3>Descrição. Subtítulo.</h3>
+                <button>Botão a ser definido</button>
+            </div>
+            <img src="#" alt="Imagem a ser definida">
+        </section>
+            <h2>Texto de Destaque</h2>
+            <p>1. Um breve parágrafo</p>
+            <p>2. Um breve parágrafo</p>
+            <p>3. Um breve parágrafo</p>
+        <section>
 
+        </section>
     </main>
 
     <footer>
-
-
 
     </footer>    
 </body>
