Adicionado um footer

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             </div>
             <img src="#" alt="Imagem a ser definida">
         </section>
+
+        <section>
             <h2>Texto de Destaque</h2>
             <p>1. Um breve parágrafo</p>
             <p>2. Um breve parágrafo</p>
             <p>3. Um breve parágrafo</p>
-        <section>
-
         </section>
     </main>
 
     <footer>
-
+        <img src="" alt="Imagem a ser definida">
     </footer>    
 </body>
 </html>
