--- a/index.html
+++ b/index.html
@@ -5,39 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Primeira Landing Page do Lucas">
+    <link rel="stylesheet" href="styles.css">
     <title>Landing Page do Lucas</title>
 </head>
 <body>
-    <header>
-        <img src="" alt="Imagem a ser definida">
-        <nav>
-            <a href="">Opção um</a>
-            <a href="">Opção dois</a>
-            <a href="">Opção três</a>
-            <a href="">Opção quatro</a>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="" alt="Imagem a ser definida">
+        <nav class="cabecalho-menu">
+            <a class="cabecalho-menu-item" href="">Opção um</a>
+            <a class="cabecalho-menu-item" href="">Opção dois</a>
+            <a class="cabecalho-menu-item" href="">Opção três</a>
+            <a class="cabecalho-menu-item" href="">Opção quatro</a>
         </nav>
     </header>
 
-    <main>
-        <section>
-            <div>
-                <h1>Título a ser definido.</h1>
-                <h3>Descrição. Subtítulo.</h3>
-                <button>Botão a ser definido</button>
+    <main class="conteudo">
+        <section class="conteudo-principal">
+            <div class="conteudo-principal-escrito">
+                <h1 class="conteudo-principal-escrito-titulo">Título a ser definido.</h1>
+                <h3 class="conteudo-principal-escrito-subtitulo">Descrição. Subtítulo.</h3>
+                <button class="conteudo-principal-escrito-botao">Botão a ser definido</button>
             </div>
-            <img src="#" alt="Imagem a ser definida">
+            <img class="conteudo-principal-imagem" src="#" alt="Imagem a ser definida">
         </section>
 
-        <section>
-            <h2>Texto de Destaque</h2>
-            <p>1. Um breve parágrafo</p>
-            <p>2. Um breve parágrafo</p>
-            <p>3. Um breve parágrafo</p>
+        <section class="conteudo-secundario">
+            <h2 class="conteudo-secundario-titulo">Texto de Destaque</h2>
+            <p class="conteudo-secundario-paragrafo">1. Um breve parágrafo</p>
+            <p class="conteudo-secundario-paragrafo">2. Um breve parágrafo</p>
+            <p class="conteudo-secundario-paragrafo">3. Um breve parágrafo</p>
         </section>
     </main>
 
-    <footer>
-        <img src="" alt="Imagem a ser definida">
+    <footer class="rodape">
+        <img class="rodape-imagem" src="" alt="Imagem a ser definida">
     </footer>    
 </body>
 </html>
