Adicionando imagens e ajustando tamanhos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="" alt="Imagem a ser definida">
+        <img class="cabecalho-imagem" src="imagem-navbar.png" alt="Imagem a ser definida">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="">Opção um</a>
             <a class="cabecalho-menu-item" href="">Opção dois</a>
@@ -26,7 +26,7 @@
                 <h3 class="conteudo-principal-escrito-subtitulo">Descrição. Subtítulo.</h3>
                 <button class="conteudo-principal-escrito-botao">Botão a ser definido</button>
             </div>
-            <img class="conteudo-principal-imagem" src="#" alt="Imagem a ser definida">
+            <img class="conteudo-principal-imagem" src="imagem-principal.png" alt="Imagem a ser definida">
         </section>
 
         <section class="conteudo-secundario">
@@ -38,7 +38,7 @@
     </main>
 
     <footer class="rodape">
-        <img class="rodape-imagem" src="" alt="Imagem a ser definida">
+        <img class="rodape-imagem" src="imagem-footer.png" alt="Imagem a ser definida">
     </footer>    
 </body>
 </html>
