Organizando informações e estilos

--- a/index.html
+++ b/index.html
@@ -10,35 +10,32 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="imagem-navbar.png" alt="Imagem a ser definida">
+        <img class="cabecalho-imagem" src="img/imagem-navbar.png" alt="Imagem a ser definida">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="">Opção um</a>
-            <a class="cabecalho-menu-item" href="">Opção dois</a>
-            <a class="cabecalho-menu-item" href="">Opção três</a>
-            <a class="cabecalho-menu-item" href="">Opção quatro</a>
+            <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/lukkazrx/">Linkedin</a>
+            <a class="cabecalho-menu-item" href="https://github.com/lukkazrx">GitHub</a>
         </nav>
     </header>
 
     <main class="conteudo">
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
-                <h1 class="conteudo-principal-escrito-titulo">Título a ser definido.</h1>
-                <h3 class="conteudo-principal-escrito-subtitulo">Descrição. Subtítulo.</h3>
-                <button class="conteudo-principal-escrito-botao">Botão a ser definido</button>
+                <h1 class="conteudo-principal-escrito-titulo">Bem-Vindo à Landing Page do Lucas.</h1>
+                <h3 class="conteudo-principal-escrito-subtitulo">Aqui você encontrará breves informações sobre o criador dessa página.</h3>
             </div>
-            <img class="conteudo-principal-imagem" src="imagem-principal.png" alt="Imagem a ser definida">
+            <img class="conteudo-principal-imagem" src="img/imagem-principal.png" alt="Imagem a ser definida">
         </section>
 
         <section class="conteudo-secundario">
-            <h2 class="conteudo-secundario-titulo">Texto de Destaque</h2>
-            <p class="conteudo-secundario-paragrafo">1. Um breve parágrafo</p>
-            <p class="conteudo-secundario-paragrafo">2. Um breve parágrafo</p>
-            <p class="conteudo-secundario-paragrafo">3. Um breve parágrafo</p>
+            <h2 class="conteudo-secundario-titulo">Informações:</h2>
+            <p class="conteudo-secundario-paragrafo">Idade: 20 Anos</p>
+            <p class="conteudo-secundario-paragrafo">Objetivo: Ser programador Front-End</p>
+            <p class="conteudo-secundario-paragrafo">HTML, CSS & JavaScript</p>
         </section>
     </main>
 
     <footer class="rodape">
-        <img class="rodape-imagem" src="imagem-footer.png" alt="Imagem a ser definida">
+        <img class="rodape-imagem" src="img/imagem-footer.png" alt="Imagem a ser definida">
     </footer>    
 </body>
 </html>
