Ajustado informações e adicionado estilo ao Scrollbar

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Bem-Vindo à Landing Page do Lucas.</h1>
-                <h3 class="conteudo-principal-escrito-subtitulo">Aqui você encontrará breves informações sobre o criador dessa página.</h3>
+                <h3 class="conteudo-principal-escrito-subtitulo">Aqui você encontrará algumas informações sobre a criação dessa página.</h3>
             </div>
             <img class="conteudo-principal-imagem" src="img/imagem-principal.png" alt="Imagem a ser definida">
         </section>
 
         <section class="conteudo-secundario">
             <h2 class="conteudo-secundario-titulo">Informações:</h2>
-            <p class="conteudo-secundario-paragrafo">Idade: 20 Anos</p>
-            <p class="conteudo-secundario-paragrafo">Objetivo: Ser programador Front-End</p>
-            <p class="conteudo-secundario-paragrafo">HTML, CSS & JavaScript</p>
+            <p class="conteudo-secundario-paragrafo">Foi utilizado apenas HTML & CSS para construir essa página</p>
+            <p class="conteudo-secundario-paragrafo">As imagens utilizadas aqui foram feitas no Illustrator</p>
+            <p class="conteudo-secundario-paragrafo">Para o versionamento foi utilizado o Git e o GitHub</p>
         </section>
     </main>
 
