--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Primeira Landing Page do Lucas">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="imagem/png" href="img/fav-icon.png" />
     <title>Landing Page do Lucas</title>
 </head>
 <body>
