Mudança do nome das classes do português para o inglês. Adicionado 'alt' ás imagens.

--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
     <title>Landing Page do Lucas</title>
 </head>
 <body>
-    <header class="cabecalho">
-        <img class="cabecalho-imagem" src="img/imagem-navbar.png" alt="Imagem a ser definida">
-        <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/lukkazrx/">Linkedin</a>
-            <a class="cabecalho-menu-item" href="https://github.com/lukkazrx">GitHub</a>
+    <header class="header">
+        <img class="header-img" src="img/imagem-navbar.png" alt="LCS">
+        <nav class="header-menu">
+            <a class="header-menu-item" href="https://www.linkedin.com/in/lukkazrx/">Linkedin</a>
+            <a class="header-menu-item" href="https://github.com/lukkazrx">GitHub</a>
         </nav>
     </header>
     <!-- TESTE-->
-    <main class="conteudo">
-        <section class="conteudo-principal">
-            <div class="conteudo-principal-escrito">
-                <h1 class="conteudo-principal-escrito-titulo">Bem-Vindo à Landing Page do Lucas.</h1>
-                <h3 class="conteudo-principal-escrito-subtitulo">Aqui você encontrará algumas informações sobre a criação dessa página.</h3>
+    <main class="content">
+        <section class="main-content">
+            <div class="main-content-written">
+                <h1 class="main-content-written-title">Bem-Vindo à Landing Page do Lucas.</h1>
+                <h3 class="main-content-written-subtitle">Aqui você encontrará algumas informações sobre a criação dessa página.</h3>
             </div>
-            <img class="conteudo-principal-imagem" src="img/imagem-principal.png" alt="Imagem a ser definida">
+            <img class="main-content-img" src="img/imagem-principal.png" alt="moon">
         </section>
 
-        <section class="conteudo-secundario">
-            <h2 class="conteudo-secundario-titulo">Informações:</h2>
-            <p class="conteudo-secundario-paragrafo">Foi utilizado apenas HTML & CSS para construir essa página</p>
-            <p class="conteudo-secundario-paragrafo">As imagens utilizadas aqui foram feitas no Illustrator</p>
-            <p class="conteudo-secundario-paragrafo">Para o versionamento foi utilizado o Git e o GitHub</p>
+        <section class="secondary-content">
+            <h2 class="secondary-content-title">Informações:</h2>
+            <p class="secondary-content-paragraph">Foi utilizado apenas HTML & CSS para construir essa página</p>
+            <p class="secondary-content-paragraph">As imagens utilizadas aqui foram feitas no Illustrator</p>
+            <p class="secondary-content-paragraph">Para o versionamento foi utilizado o Git e o GitHub</p>
         </section>
     </main>
 
-    <footer class="rodape">
-        <img class="rodape-imagem" src="img/imagem-footer.png" alt="Imagem a ser definida">
+    <footer class="footer">
+        <img class="footer-img" src="img/imagem-footer.png" alt="Nunes">
     </footer>    
 </body>
 </html>
